# ai-agent

./: .env.example  .gitignore  README.md  agent.py  agent_loop.py  config.py  event_bus.py  events.py  main.py  pyproject.toml
audit/: logger.py  store.py
guardrails/: confirmation_gate.py  input_sanitizer.py  output_validator.py  tool_guards.py
interfaces/: cli_interface.py  telegram_interface.py
memory/: store.py
prompts/: system_prompt.md
queue_backends/: __init__.py  rabbitmq_backend.py  redis_backend.py
scheduler/: jobs.py
services/: video_analyzer.py
services/analyzers/: __init__.py  claude_analyzer.py  llamacpp_analyzer.py  ollama_analyzer.py
tests/: conftest.py  test_agent.py  test_memory_store.py  test_scheduler.py  test_tools.py
tools/: __init__.py  audit_tool.py  ax_tool.py  code_exec.py  desktop_control_tool.py  email_tool.py  file_ops.py  memory_tools.py  ocr_tool.py  prompt_editor_tool.py  scheduler_tool.py  screen_context.py  screen_record_tool.py  self_improve_tool.py  self_reflect_schedule_tool.py  shell_tool.py  telegram_tool.py  tool_creator_tool.py  web_search.py
