[project]
name = "agent"
version = "0.1.0"
description = "AI agent with LangChain — tools, scheduling, and persistent memory"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.3.25",
    "langchain-core>=0.3.58",
    "langchain-community>=0.3.24",
    "langchain-anthropic>=0.3.12",
    "langchain-openai>=0.3.0",
    "langchain-ollama>=0.3.3",
    "langchain-experimental>=0.3.4",
    "anthropic>=0.49.0",
    "sqlalchemy>=2.0.40",
    "apscheduler>=3.11.0,<4.0",
    "ddgs>=9.0.0",
    "python-telegram-bot>=21.0",
    "python-dotenv>=1.1.0",
    "rich>=13.9.4",
    "pydantic>=2.11.3",
    "httpx>=0.28.1",
    "python-dateutil>=2.9.0",
    "langgraph>=1.1.10",
    "langgraph-checkpoint-sqlite>=3.0.3",
    "mss>=9.0.0",
    "pillow>=10.0.0",
    "redis>=5.0.0",
    "pika>=1.3.0",
    "ollama>=0.4.0",
    "llama-cpp-python>=0.3.0",
    "pyautogui>=0.9.54",
]

[project.scripts]
agent = "main:run_cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-mock>=3.15.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
